--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "atom-deepscan",
   "main": "./src/main.js",
   "version": "1.1.0",
-  "description": "Detect JavaScript and React bugs and quality issues more precisely",
+  "description": "Detect bugs and quality issues in JavaScript, TypeScript and React more precisely",
   "repository": "https://github.com/deepscan/atom-deepscan.git",
   "license": "MIT",
   "engines": {
