--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "jsx",
     "typescript",
     "react",
-    "linters"
+    "linters",
+    "vuejs"
   ],
   "dependencies": {
     "atom-babel6-transpiler": "^1.1.1",
