--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "babel-preset-node5": "^12.0.0",
     "atom-linter": "^10.0.0",
     "crypto-random-string": "^1.0.0",
+    "marked": "^0.3.9",
     "request": "^2.79.0"
   },
   "devDependencies": {},
