--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "atom-deepscan",
   "main": "./src/main.js",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "Detect bugs and quality issues in JavaScript, TypeScript and React more precisely",
   "repository": "https://github.com/deepscan/atom-deepscan.git",
   "license": "MIT",
@@ -39,6 +39,13 @@
       },
       "default": [],
       "order": 4
+    },
+    "showDecorators": {
+      "title": "Show inline decorators",
+      "description": "Show or hide inline decorators regarding errors",
+      "type": "boolean",
+      "default": true,
+      "order": 5
     }
   },
   "scripts": {
