--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -4,8 +4,12 @@ on:
   # Run manually
   workflow_dispatch:
     inputs:
-      version_type:
-        description: 'Version type (one of major, minor, patch)'
+      publish_opt:
+        description: >
+          Option to use after `apm publish`.
+          apm publish [<newversion> | major | minor | patch | build]
+          apm publish --tag <tagname>
+          apm publish --rename <new-name>
         required: true
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
@@ -31,7 +35,7 @@ jobs:
         sudo sh -c 'echo "deb [arch=amd64] https://packagecloud.io/AtomEditor/atom/any/ any main" > /etc/apt/sources.list.d/atom.list'
         sudo apt-get update
         sudo apt-get install atom
-    - name: Publish with version type ${{ github.event.inputs.version_type }}
-      run: apm publish ${{ github.event.inputs.version_type }}
+    - name: Publish with option ${{ github.event.inputs.publish_opt }}
+      run: apm publish ${{ github.event.inputs.publish_opt }}
       env:
         ATOM_ACCESS_TOKEN: ${{ secrets.ATOM_ACCESS_TOKEN }}
